# Projektseminar_Robotik_2023

./: README.md
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Distance.msg
decider/: CMakeLists.txt  README.md  package.xml
decider/include/: node.hpp
decider/include/decider/: decider.hpp
decider/launch/: decider.launch.py  start_all.launch.py
decider/param/: param.yaml
decider/src/: decider.cpp  main.cpp  node.cpp
filters/: CMakeLists.txt  LICENSE  README.md  package.xml
filters/include/filters/: color_filter.hpp  encoding_filter.hpp  filters.hpp  post_filters.hpp  range_filter.hpp
filters/src/: color_filter.cpp  encoding_filter.cpp  main.cpp  post_filters.cpp  range_filter.cpp
lidar_curb_detection/: CMakeLists.txt  README.md  Readme.md  package.xml
lidar_curb_detection/include/: node.hpp
lidar_curb_detection/include/lidar_curb_detection/: lidar_curb_detection.hpp
lidar_curb_detection/launch/: default_topics.yaml  lidar_curb_detection.launch.py  lidar_curb_detection.sublaunch.launch.py  sublaunch.lidar_curb_detection.launch.py
lidar_curb_detection/param/: param.yaml
lidar_curb_detection/src/: lidar_curb_detection.cpp  main.cpp  node.cpp
misc/: images.yaml  pointclouds.yaml  rgb_CameraInfo.yml  robot.xml  robot_rgb.xml
test_hough_pkg/: CMakeLists.txt  package.xml
test_hough_pkg/src/: main.cpp
test_pkg/: CMakeLists.txt  package.xml
test_pkg/include/: node.hpp  src.hpp
test_pkg/launch/: node.launch.py
test_pkg/param/: param.yaml
test_pkg/src/: main.cpp  node.cpp  src.cpp
visualize_path/: CMakeLists.txt  README.md  package.xml
visualize_path/include/: node.hpp
visualize_path/include/visualize_path/: visualize_path.hpp
visualize_path/launch/: sublaunch.visualize_path.launch.py  visualize_path.launch.py
visualize_path/param/: param.yaml
visualize_path/src/: main.cpp  node.cpp  visualize_path.cpp
wayfinding/: CMakeLists.txt  LICENSE  README.md  package.xml
wayfinding/include/: node.hpp
wayfinding/include/wayfinding/: wayfinding.hpp
wayfinding/launch/: default_topics.yaml  wayfinding.launch.py  wayfinding.sublaunch.launch.py
wayfinding/param/: param.yaml
wayfinding/src/: main.cpp  node.cpp  node.cpp.backup  wayfinding.cpp  wayfinding_line_detection.cpp  wayfinding_top_down.cpp
