<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wayfinding</name>
  <version>0.0.0</version>
  <description>Ermittlung der Wegbreite.</description>
  <maintainer email="Johannes-Georg.Kohl@student.tu-freiberg.de">Johannes Kohl</maintainer>
  <maintainer email="Georg.Muck@student.tu-freiberg.de">Georg Muck</maintainer>
  <maintainer email="Nico-Paul-Rene.Zumpe@student.tu-freiberg.de">Nico Zumpe</maintainer>
  <license>WTFPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>custom_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>zed_interfaces</depend>

  <depend>filters</depend>
  <depend>bump_detection</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
